bootcamps adding set

--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,7 @@
 NODE_ENV=development
 PORT=3000
+# MONGO_URI=mongodb://localhost:27017/devcamper
+MONGO_URI=mongodb+srv://slayoffer:1AfdDjuziPR8RRtj@devcraft.56e2kvk.mongodb.net/devcamper?retryWrites=true&w=majority
+
+GEOCODER_PROVIDER=mapquest
+GEOCODER_API_KEY=ny3JABjayJTjTYYGvinhAasIJUe0zbnm
