--- a/package.json
+++ b/package.json
@@ -33,7 +33,12 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.6.1",
+    "morgan": "^1.10.0",
+    "node-geocoder": "^4.2.0",
+    "slugify": "^1.6.5"
   }
 }
