--- a/.gitignore
+++ b/.gitignore
@@ -78,7 +78,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
-config/config.env
+config/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
