--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
