--- a/package.json
+++ b/package.json
@@ -33,13 +33,23 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.6.0",
+    "helmet": "^6.0.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
-    "slugify": "^1.6.5"
+    "nodemailer": "^6.7.8",
+    "slugify": "^1.6.5",
+    "xss-clean": "^0.1.1"
   }
 }
